# RCT-Reviewer

./: .dockerignore  .env.example  .gitattributes  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INFO.md  LFS push:pull guide.md  LICENSE.txt  README.md  app.py  convert_models.py  pyproject.toml  requirements.txt  upload_to_hf.py
data/bias_ab/: overall_clf.joblib
data/drugbank/: drugbank.joblib
data/human/: human_models.joblib
data/minimap/: cui_to_mh_supp.joblib  cui_to_str_supp.joblib  str_to_cui_supp.joblib  subtrees.joblib
data/rct/: cnn_vocab_map.joblib  svm_cnn_calibration.joblib  svm_cnn_ptyp_calibration.joblib
miscellanous/: temp.py
rct_reviewer/: __init__.py  app.py  app1.py  app2.py  config.py
rct_reviewer/.streamlit/: config.toml
rct_reviewer/core/: __init__.py  exceptions.py  models.py  pdf_parser.py
rct_reviewer/ml/: __init__.py  bias_assessor.py  embeddings.py  lexicons.py  pico_extractor.py  pico_robot.py  rct_classifier.py  rct_robot.py
rct_reviewer/nlp/: __init__.py  abbreviation.py
rct_reviewer/ui/: __init__.py
rct_reviewer/ui/components/: __init__.py  bias_table.py  citation_notice.py  export_buttons.py  pdf_uploader.py  pico_display.py  results_viewer.py
