[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rct-reviewer"
version = "1.0.0"
description = "RCT-Reviewer - Modernized automatic extraction of PICO data and Risk of Bias assessment from clinical trial reports using transformer models"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-only"
authors = [
    {name = "Vihaan Sahu", email = "vsahu@seu.edu.ge"},
]
maintainers = [
    {name = "Vihaan Sahu", email = "pteroisvolitans12@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core UI
    "streamlit>=1.45.0",
    "st-pages>=0.5.0",
    
    # Deep Learning
    "torch>=2.6.0",
    "transformers>=4.48.0",
    "accelerate>=1.3.0",
    
    # NLP
    "spacy>=3.8.0",
    
    # PDF Processing
    "pymupdf>=1.25.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    
    # Data & Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "scikit-learn>=1.6.0",
    
    # Utilities
    "tqdm>=4.67.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[project.scripts]
rct-reviewer = "rct_reviewer.app:main"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true